# study-group-app

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  study-group-app.cabal
app/: Client.hs  Server.hs
docs/: deploy.md  overview.md  plan-detail.md  plan.md  roadmap.md
src/StudyGroup/: Api.hs  Cli.hs  Operations.hs  Storage.hs  Types.hs
src/StudyGroup/Http/: Client.hs  ClientTls.hs  Parser.hs  Response.hs  Router.hs  Server.hs  Types.hs
src/StudyGroup/Json/: Encode.hs  Parser.hs  Printer.hs  Types.hs
